[package]
name = "ees"
version = "0.1.0"
authors = []
edition = "2018"
license = "CC0-1.0"
description = "Simple error-handling library"
categories = ["rust-patterns"]
keywords = ["error-handling", "error"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
